# Analisador_Grafo

./: CMakeLists.txt  README.md
scr/: main.c
scr/inc/: bibliotecas.h  structs.h
scr/tad/arco/: arco.c  arco.h
scr/tad/aresta/: aresta.c  aresta.h
scr/tad/grafo/: grafo.c  grafo.h
scr/tad/lista/: lista.c  lista.h
scr/tad/node/: node.c  node.h
scr/tad/vertice/: vertice.c  vertice.h
